Actualizadas las series por defecto.

--- a/Core/Data/Lang/EN/series.csv
+++ b/Core/Data/Lang/EN/series.csv
@@ -1,4 +1,4 @@
-codserie;descripcion;siniva
-"A";"A SERIES";false
-"R";"RECTIFYING";false
-"S";"SIMPLIFIED";false
+codserie;descripcion;tipo;siniva
+"A";"A SERIES";;false
+"R";"RECTIFYING";"R";false
+"S";"SIMPLIFIED";"S";false
