--- a/Core/Data/Lang/ES/series.csv
+++ b/Core/Data/Lang/ES/series.csv
@@ -1,4 +1,4 @@
-codserie;descripcion;siniva
-"A";"General";false
-"R";"Rectificativas";false
-"S";"Simplificadas";false
+codserie;descripcion;tipo;siniva
+"A";"General";;false
+"R";"Rectificativas";"R";false
+"S";"Simplificadas";"S";false
