--- a/Core/Data/Lang/eu_ES/series.csv
+++ b/Core/Data/Lang/eu_ES/series.csv
@@ -1,4 +1,4 @@
-codserie;descripcion;siniva
-"A";"A seriea";false
-"Z";"Zuzentzaileak";false
-"S";"Sinplifikatuak";false
+codserie;descripcion;tipo;siniva
+"A";"A seriea";;false
+"Z";"Zuzentzaileak";"R";false
+"S";"Sinplifikatuak";"S";false
