Añadidos mensajes cuando la comprobación del VIES es correcta.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -498,6 +498,7 @@
     "equivalent-account-not-found": "No s'ha pogut trobar un compte equivalent a %accountCode% a l'exercici %exerciseCode%. Heu importat el pla de comptes?",
     "equivalent-subaccount-not-found": "No s'ha trobat un subcompte equivalent a %subAccountCode% per a copiar.",
     "error": "ERROR: %error%",
+    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "S'ha produït un error en connectar-se al servidor Memcache.",
     "error-deleting-lines": "Error en eliminar línies",
     "error-no-name-in-settings": "Error a la vista %viewName%. Cal informar el 'name' en qualcuna columna de l'xml",
@@ -724,6 +725,7 @@
     "invalid-date-there-are-invoices-after": "Data no vàlida. Ja hi ha factures amb data posterior a %date%",
     "invalid-date-there-are-invoices-before": "Data no vàlida. La data %date% és posterior a la data de la factura següent.",
     "invalid-iban": "IBAN no vàlid: %iban%",
+    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
     "invalid-number": "Número no vàlid: %number%",
     "invalid-request": "Petició no vàlida",
     "invalid-user-can-permission": "Permís no vàlid: %permission%. Els permisos disponibles són access, delete, export, import, update i only-owner-data.",
@@ -1485,11 +1487,14 @@
     "vat": "IVA",
     "vat-document": "Document",
     "vat-exception": "Excepció d'IVA",
+    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
+    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
     "vat-regime": "Règim de l'IVA",
     "VAT-register": "Impostos",
     "vat-regularization": "Regularització d'IVA",
     "verified": "Verificat",
     "version": "Versió",
+    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-column-net-subtotal": "Veure columna subtotal o net",
     "warehouse": "Magatzem",
     "warehouse-cant-be-same": "El magatzem d'origen i destí no pot ser el mateix.",
