--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -498,6 +498,7 @@
     "equivalent-account-not-found": "Konnte in Übung 1 kein äquivalentes Konto zu 0 finden <a href='2'> Haben Sie den Kontenplan importiert? <\/a>",
     "equivalent-subaccount-not-found": "Es wurde kein Unterkonto zum Kopieren gefunden, das 0 entspricht.",
     "error": "ERROR: %1$s",
+    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "Fehler beim Verbinden mit dem Memcache-Server.",
     "error-deleting-lines": "Fehler beim Zeilen löschen",
     "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
@@ -724,6 +725,7 @@
     "invalid-date-there-are-invoices-after": "invalid-date-there-are-invoices-after",
     "invalid-date-there-are-invoices-before": "invalid-date-there-are-invoices-before",
     "invalid-iban": "invalid-iban",
+    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
     "invalid-number": "invalid-number",
     "invalid-request": "Antrag nicht gültig",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
@@ -1485,11 +1487,14 @@
     "vat": "IVA",
     "vat-document": "Steuerdokument",
     "vat-exception": "Excepción de IVA",
+    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
+    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
     "vat-regime": "MwSt-Regelung",
     "VAT-register": "Steuerbuch",
     "vat-regularization": "MwSt Regulierung",
     "verified": "geprüft",
     "version": "Version",
+    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "warehouse": "Warenhaus",
     "warehouse-cant-be-same": "Das Ursprungs- und das Ziellager können nicht identisch sein.",
