--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -498,6 +498,7 @@
     "equivalent-account-not-found": "Couldn't find equivalent account to %accountCode% in exercise %exerciseCode%. Have you imported the chart of accounts?",
     "equivalent-subaccount-not-found": "No subaccount equivalent to %subAccountCode% was found for copying.",
     "error": "ERROR: %error%",
+    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "Error connecting to Memcache server.",
     "error-deleting-lines": "Error deleting lines",
     "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
@@ -724,6 +725,7 @@
     "invalid-date-there-are-invoices-after": "Invalid Date. There are already invoices dated after %date%",
     "invalid-date-there-are-invoices-before": "Invalid date. The date %date% is later than that of the following invoice.",
     "invalid-iban": "Invalid IBAN: %iban%",
+    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
     "invalid-number": "Invalid number: %number%",
     "invalid-request": "Invalid request",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
@@ -1485,11 +1487,14 @@
     "vat": "VAT",
     "vat-document": "VAT Document",
     "vat-exception": "VAT Exception",
+    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
+    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
     "vat-regime": "VAT Regime",
     "VAT-register": "VAT registration",
     "vat-regularization": "VAT Regularization",
     "verified": "Verified",
     "version": "Version",
+    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-column-net-subtotal": "See subtotal or net column",
     "warehouse": "Warehouse",
     "warehouse-cant-be-same": "The origin and destination warehouse can not be the same.",
