--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -498,6 +498,7 @@
     "equivalent-account-not-found": "Impossible de trouver le compte équivalent à %accountCode% dans l'exercice %exerciseCode%. Avez-vous importé le plan comptable?",
     "equivalent-subaccount-not-found": "Aucun sous-compte équivalent à %subAccountCode% n'a été trouvé pour la copie.",
     "error": "ERREUR: %error%",
+    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "Erreur lors de la connexion au serveur Memcache.",
     "error-deleting-lines": "Erreur lors de la suppression des lignes",
     "error-no-name-in-settings": "Erreur dans %viewName% view. Manquant d'informer le 'nom' dans une colonne du xml",
@@ -724,6 +725,7 @@
     "invalid-date-there-are-invoices-after": "Date incorrecte. Il existe déjà des factures datées après %date%",
     "invalid-date-there-are-invoices-before": "Date incorrecte. La date %date% est plus récente que celle de la facture suivante.",
     "invalid-iban": "IBAN incorrect : %iban%",
+    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
     "invalid-number": "Nombre incorrect : %number%",
     "invalid-request": "Requête incorrecte",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
@@ -1485,11 +1487,14 @@
     "vat": "TVA",
     "vat-document": "Document de TVA",
     "vat-exception": "Excepción de IVA",
+    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
+    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
     "vat-regime": "Régime de TVA",
     "VAT-register": "Livre d'impôt",
     "vat-regularization": "Régularisation de la TVA",
     "verified": "vérifié",
     "version": "Version",
+    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "warehouse": "Entrepôt",
     "warehouse-cant-be-same": "L'entrepôt d'origine et de destination ne peut pas être le même.",
