--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -498,6 +498,7 @@
     "equivalent-account-not-found": "Non se puido atopar conta equivalente a %accountCode%  no exercicio %exerciseCode%.  Importaches o plan contable?",
     "equivalent-subaccount-not-found": "Non se atopou ningunha subconta equivalente a %subAccountCode% para copiar.",
     "error": "ERRO:  %error%",
+    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "Erro ao conectar co servidor Memcache.",
     "error-deleting-lines": "Erro ao eliminar liñas",
     "error-no-name-in-settings": "Error na vista %viewName%. Falta informar el 'name' nalgunha columna do xml",
@@ -724,6 +725,7 @@
     "invalid-date-there-are-invoices-after": "Data non válida. Hai facturas con data posterior ao %date%",
     "invalid-date-there-are-invoices-before": "Data non válida. A data %date% é posterior a data da factura seguinte.",
     "invalid-iban": "IBAN non válido: %iban%",
+    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
     "invalid-number": "Número non válido: %number%",
     "invalid-request": "Petición non válida",
     "invalid-user-can-permission": "Permiso non válido: %permission%. Os permisos dispoñibles son access, delete, export, import, update e only-owner-data.",
@@ -1485,11 +1487,14 @@
     "vat": "IVE",
     "vat-document": "Documento",
     "vat-exception": "Excepción de IVA",
+    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
+    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
     "vat-regime": "Réxime do IVE",
     "VAT-register": "Libro de impostos",
     "vat-regularization": "Regularización de Impostos",
     "verified": "verificado",
     "version": "Versión",
+    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-column-net-subtotal": "Ver columna subtotal ou neto",
     "warehouse": "Almacén",
     "warehouse-cant-be-same": "O almacén de orixe e destino non pode ser o mesmo.",
