--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -498,6 +498,7 @@
     "equivalent-account-not-found": "Não foi possível encontrar uma conta equivalente a 0 no exercício 1 <a href='2'> Você importou o quadro das contas? <\/a>",
     "equivalent-subaccount-not-found": "Não foi encontrada nenhuma subconta equivalente a 0 para copiar.",
     "error": "ERRO: 0",
+    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "Erro ao conectar-se ao servidor Memcache.",
     "error-deleting-lines": "error-deleting-lines",
     "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
@@ -724,6 +725,7 @@
     "invalid-date-there-are-invoices-after": "invalid-date-there-are-invoices-after",
     "invalid-date-there-are-invoices-before": "invalid-date-there-are-invoices-before",
     "invalid-iban": "invalid-iban",
+    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
     "invalid-number": "Número não válido: %number%",
     "invalid-request": "Petición no válida",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
@@ -1485,11 +1487,14 @@
     "vat": "CUBA",
     "vat-document": "VAT Document",
     "vat-exception": "Excepción de IVA",
+    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
+    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
     "vat-regime": "Regime de IVA",
     "VAT-register": "VAT registration",
     "vat-regularization": "VAT Regularization",
     "verified": "verified",
     "version": "Versão",
+    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "warehouse": "Armazém",
     "warehouse-cant-be-same": "O armazém de origem e destino não pode ser o mesmo.",
