--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -498,6 +498,7 @@
     "equivalent-account-not-found": "No s'ha trobat un conte equivalent a %accountCode% en l'eixercici %exerciseCode%. ¿Has importat el pla contable?",
     "equivalent-subaccount-not-found": "No s'ha trobat cap subconte aquivalent a %subAccountCode% per a copiar.",
     "error": "ERRO: %error%",
+    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "Ha hagut un erro conectant al servidor Memcaché.",
     "error-deleting-lines": "Erro borrant llínees",
     "error-no-name-in-settings": "Erro comprovant la vista %viewName%. No hi ha cap columna 'name' en el xml",
@@ -724,6 +725,7 @@
     "invalid-date-there-are-invoices-after": "Data no vàlida. Ja hi ha factures amb data posterior a %date%",
     "invalid-date-there-are-invoices-before": "Data no vàlida. La data %date% és posterior a la data de la factura següent.",
     "invalid-iban": "IBAN no vàlid: %iban%",
+    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
     "invalid-number": "invalid-number",
     "invalid-request": "Petició no vàlida",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
@@ -1485,11 +1487,14 @@
     "vat": "IVA",
     "vat-document": "Document de l'IVA",
     "vat-exception": "Excepción de IVA",
+    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
+    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
     "vat-regime": "Règim de l'IVA",
     "VAT-register": "Llibre d'imposts",
     "vat-regularization": "Regularització de l'IVA",
     "verified": "Verificat",
     "version": "Versió",
+    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "warehouse": "Magatzem",
     "warehouse-cant-be-same": "L'almagasém d'orige i el de destí no poden ser el mateix.",
