--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -498,6 +498,7 @@
     "equivalent-account-not-found": "No se ha encontrado la cuenta equivalente a %accountCode% en el ejercicio %exerciseCode% ¿Has importado el plan contable?",
     "equivalent-subaccount-not-found": "No se ha encontrado ninguna subcuenta equivalente a %subAccountCode% para copiar.",
     "error": "ERROR: %error%",
+    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "Error al conectar con el servidor Memcache.",
     "error-deleting-lines": "Error al eliminar líneas",
     "error-no-name-in-settings": "Error en la vista %viewName%. Falta informar el 'name' en alguna columna del xml",
@@ -724,6 +725,7 @@
     "invalid-date-there-are-invoices-after": "Fecha no válida: %date%. La factura %other% es posterior y sin embargo tiene fecha anterior: %other-date%. Toda factura debe tener una fecha anterior o igual a la siguiente.",
     "invalid-date-there-are-invoices-before": "Fecha no válida: %date%. La factura %other% es anterior a esta y sin embargo tiene fecha posterior: %other-date%. Toda factura debe tener una fecha anterior o igual a la siguiente.",
     "invalid-iban": "IBAN no válido: %iban%",
+    "invalid-iso-code": "Código ISO '%iso-code%' no válido",
     "invalid-number": "Número no válido: %number%",
     "invalid-request": "Petición no válida",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
@@ -1485,11 +1487,14 @@
     "vat": "IVA",
     "vat-document": "Documento",
     "vat-exception": "Excepción de IVA",
+    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
+    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
     "vat-regime": "Régimen impuestos",
     "VAT-register": "Impuestos",
     "vat-regularization": "Regularización de IVA",
     "verified": "Verificado",
     "version": "Versión",
+    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "warehouse": "Almacén",
     "warehouse-cant-be-same": "El almacén de orígen y de destino no puede ser el mismo.",
