--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -498,6 +498,7 @@
     "equivalent-account-not-found": "Ezin izan da %accountCode% kontuaren baliokidea aurkitu %exerciseCode% ekitaldian.  Kontu-plana inportatu duzu?",
     "equivalent-subaccount-not-found": "Ez da %subAccountCode% azpikontuaren baliokiderik aurkitu kopiatzeko.",
     "error": "ERROREA: %error%",
+    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "Errore bat gertatu da Memcache zerbitzarira konektatzean.",
     "error-deleting-lines": "Errore bat gertatu da lerroak ezabatzean",
     "error-no-name-in-settings": "Errore bat dago %viewName% ikuspegian. Xml-an zutabe baten 'name' jakinaraztea falta da",
@@ -724,6 +725,7 @@
     "invalid-date-there-are-invoices-after": "Data baliogabea. Ba daude fakturak %date% ondorengo datarekin",
     "invalid-date-there-are-invoices-before": "Data baliogabea. %date% data hurrengo fakturaren dataren ondorengoa da",
     "invalid-iban": "IBAN baliogabea: %iban%",
+    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
     "invalid-number": "Zenbaki baliogabea: %number%",
     "invalid-request": "Eskaera baliogabea",
     "invalid-user-can-permission": "Baimen baliogabea: %permission%. Eskuragarri dauden baimenak atzitu, ezabatu, esportatu, inportatu, eguneratu eta jabe bakarraren datuak dira.",
@@ -1485,11 +1487,14 @@
     "vat": "BEZ",
     "vat-document": "Dokumentua",
     "vat-exception": "BEZaren salbuespena",
+    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
+    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
     "vat-regime": "BEZ erregimena",
     "VAT-register": "Zerga liburua",
     "vat-regularization": "BEZ erregularizazioa",
     "verified": "Egiaztatua",
     "version": "Bertsioa",
+    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-column-net-subtotal": "Zutabean azpi-totala edo garbia ikusi",
     "warehouse": "Biltegia",
     "warehouse-cant-be-same": "Jatorrizko eta helmugako biltegiak ezin dira berdinak izan.",
