--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -498,6 +498,7 @@
     "equivalent-account-not-found": "Impossibile trovare l'account equivalente su 0 nell'esercizio 1 <a href='2'> Hai importato il piano dei conti? <\/a>",
     "equivalent-subaccount-not-found": "Nessun subaccount equivalente a 0 è stato trovato per la copia.",
     "error": "Errore:% 1 $ s",
+    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "Errore durante la connessione al server Memcache.",
     "error-deleting-lines": "error-deleting-lines",
     "error-no-name-in-settings": "Error testing %viewName% view. No 'name' column in xml",
@@ -724,6 +725,7 @@
     "invalid-date-there-are-invoices-after": "invalid-date-there-are-invoices-after",
     "invalid-date-there-are-invoices-before": "invalid-date-there-are-invoices-before",
     "invalid-iban": "IBAN invalido %iban%",
+    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
     "invalid-number": "invalid-number",
     "invalid-request": "Petición no válida",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
@@ -1485,11 +1487,14 @@
     "vat": "IVA",
     "vat-document": "VAT Document",
     "vat-exception": "Excepción de IVA",
+    "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
+    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
     "vat-regime": "Regime IVA",
     "VAT-register": "Partita IVA",
     "vat-regularization": "VAT Regularization",
     "verified": "verified",
     "version": "versione",
+    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "warehouse": "Magazzino",
     "warehouse-cant-be-same": "Il magazzino di origine e destinazione non può essere lo stesso.",
