--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -264,6 +264,7 @@
     "company-commission-info": "Es wird nur für das ausgewählte Unternehmen angewendet",
     "company-manager": "Firmenleiter",
     "company-name": "Name der Firma",
+    "company-warehouse": "Empresa\/Almacén",
     "comparative": "Comparativo",
     "compared": "verglichen",
     "compatible": "kompatibel",
