--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -264,6 +264,7 @@
     "company-commission-info": "It will only apply to the selected company",
     "company-manager": "Company manager",
     "company-name": "Company name",
+    "company-warehouse": "Empresa\/Almacén",
     "comparative": "Comparative",
     "compared": "Compared",
     "compatible": "Compatible",
