--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -264,6 +264,7 @@
     "company-commission-info": "Cela s'appliquera uniquement à l'entreprise sélectionnée",
     "company-manager": "Chef d'entreprise",
     "company-name": "Nom de la compagnie",
+    "company-warehouse": "Empresa\/Almacén",
     "comparative": "Comparativo",
     "compared": "Comparé à",
     "compatible": "Compatible",
