--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -264,6 +264,7 @@
     "company-commission-info": "company-commission-info",
     "company-manager": "Direttore aziendale",
     "company-name": "Nome della ditta",
+    "company-warehouse": "Empresa\/Almacén",
     "comparative": "Comparativo",
     "compared": "compared",
     "compatible": "Compatible",
