--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -264,6 +264,7 @@
     "company-commission-info": "Només s'aplicarà a l'empresa seleccionada",
     "company-manager": "Administrador de l'empresa",
     "company-name": "Nom de l'empresa",
+    "company-warehouse": "Empresa\/Almacén",
     "comparative": "Comparativo",
     "compared": "Comparat",
     "compatible": "Compatible",
