--- a/Core/Translation/es_PE.json
+++ b/Core/Translation/es_PE.json
@@ -264,6 +264,7 @@
     "company-commission-info": "Sólo se aplicará a la empresa seleccionada",
     "company-manager": "gerente de la compañía",
     "company-name": "Nombre de empresa",
+    "company-warehouse": "Empresa\/Almacén",
     "comparative": "Comparativo",
     "compared": "Comparado",
     "compatible": "Compatible",
