--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -264,6 +264,7 @@
     "company-commission-info": "Aukeratutako enpresari bakarrik aplikatuko zaio",
     "company-manager": "Enpresa kudeatzailea",
     "company-name": "Enpresaren izena",
+    "company-warehouse": "Empresa\/Almacén",
     "comparative": "Konparatiboa",
     "compared": "Konparatuta",
     "compatible": "Bateragarria",
