--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -264,6 +264,7 @@
     "company-commission-info": "Só se aplicará á empresa seleccionada",
     "company-manager": "Xerente de empresa",
     "company-name": "Nome da empresa",
+    "company-warehouse": "Empresa\/Almacén",
     "comparative": "Comparativo",
     "compared": "Comparado",
     "compatible": "Compatible",
