--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -264,6 +264,7 @@
     "company-commission-info": "company-commission-info",
     "company-manager": "Gerente de empresa",
     "company-name": "Nome da empresa",
+    "company-warehouse": "Empresa\/Almacén",
     "comparative": "Comparativo",
     "compared": "compared",
     "compatible": "Compatible",
