--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1201,6 +1201,7 @@
     "renumber-accounting-ok": "Renumeració d'assentaments completada",
     "renumber-accounting-p": "Renumera els seients per data, de més petit a més gran",
     "renumber-invoices-p": "Renumera les factures en base a la data, de mes petit a més gran",
+    "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Repeteix la contrasenya",
     "reply": "Respuesta",
     "report": "Informe",
