--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1201,6 +1201,7 @@
     "renumber-accounting-ok": "Neunummerierung der Buchungen abgeschlossen.",
     "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
+    "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Passwort wiederholen",
     "reply": "Respuesta",
     "report": "Bericht",
