--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1201,6 +1201,7 @@
     "renumber-accounting-ok": "La renumeració dels assentamens ha acabat",
     "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
+    "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Repetix la contrasenya",
     "reply": "Respuesta",
     "report": "Informe",
