Modificada la forma en la que se calcula el almacenamiento utilizado. Además, se ha añadido un aviso de límite casi alcanzado en la biblioteca.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1048,7 +1048,9 @@
     "payment-methods": "Zahlungsarten",
     "payments": "Zahlungen",
     "pct": "% pct",
+    "pct-irpf": "% IRPF",
     "pct-surcharge": "Surcharge rate",
+    "pct-tax": "% impuestos",
     "pct-vat": "VAT rate",
     "pending": "Offen",
     "pending-invoices-button": "ausstehende Rechnungen",
@@ -1316,6 +1318,7 @@
     "stock-transfers": "stock transfers",
     "stockmax": "Lager max.",
     "stockmin": "Lager min.",
+    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "storage-limit-reached",
     "structured-data-csv": "CSV-Datei",
     "sub-account": "Unterkonto",
