--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1048,7 +1048,9 @@
     "payment-methods": "Payment methods",
     "payments": "Payments",
     "pct": "% pct",
+    "pct-irpf": "% IRPF",
     "pct-surcharge": "Surcharge rate",
+    "pct-tax": "% impuestos",
     "pct-vat": "VAT rate",
     "pending": "Pending",
     "pending-invoices-button": "Risk:",
@@ -1316,6 +1318,7 @@
     "stock-transfers": "stock transfers",
     "stockmax": "Stock max.",
     "stockmin": "Stock min.",
+    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "Storage limit reached",
     "structured-data-csv": "CSV file",
     "sub-account": "Sub-account",
