--- a/Core/Translation/es_PE.json
+++ b/Core/Translation/es_PE.json
@@ -1048,7 +1048,9 @@
     "payment-methods": "Métodos de pago",
     "payments": "Pagos",
     "pct": "% pct",
+    "pct-irpf": "% IRPF",
     "pct-surcharge": "% Recargo",
+    "pct-tax": "% impuestos",
     "pct-vat": "% Impuesto",
     "pending": "Pendiente",
     "pending-invoices-button": "Fact. Ptes:",
@@ -1316,6 +1318,7 @@
     "stock-transfers": "Transferencias de stock",
     "stockmax": "Stock máx.",
     "stockmin": "Stock mín.",
+    "storage-limit-almost": "Límite de almacenamiento (%limit%) casi alcanzado (%used%). Quedan %free%",
     "storage-limit-reached": "Límite de almacenamiento alcanzado",
     "structured-data-csv": "Archivo CSV",
     "sub-account": "Subcuenta",
