--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1048,7 +1048,9 @@
     "payment-methods": "Ordainketa moduak",
     "payments": "Ordainketak",
     "pct": "%",
+    "pct-irpf": "PFEZ %",
     "pct-surcharge": "Gainkargu %",
+    "pct-tax": "% impuestos",
     "pct-vat": "Zerga %",
     "pending": "Pendiente",
     "pending-invoices-button": "Zain dauden Fakturak:",
@@ -1316,6 +1318,7 @@
     "stock-transfers": "stock transferentziak",
     "stockmax": "Gehienezko stocka",
     "stockmin": "Gutxienezko stocka",
+    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "Memoria bere mugara iritsi da",
     "structured-data-csv": "CSV artxiboa",
     "sub-account": "Azpi-kontua",
