--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1048,7 +1048,9 @@
     "payment-methods": "Méthodes de payement",
     "payments": "Paiements",
     "pct": "% pct",
+    "pct-irpf": "% IRPF",
     "pct-surcharge": "% Supplément",
+    "pct-tax": "% impuestos",
     "pct-vat": "% D'impôt",
     "pending": "En attente",
     "pending-invoices-button": "Fact. en att. :",
@@ -1316,6 +1318,7 @@
     "stock-transfers": "Transferts de stock",
     "stockmax": "Stock max.",
     "stockmin": "Stock min.",
+    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "Limite de stock atteinte",
     "structured-data-csv": "Fichier CSV",
     "sub-account": "Sous-compte",
