--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1048,7 +1048,9 @@
     "payment-methods": "Métodos de pagamento",
     "payments": "Pagos",
     "pct": "% pct",
+    "pct-irpf": "% IRPF",
     "pct-surcharge": "% Recargo",
+    "pct-tax": "% impuestos",
     "pct-vat": "% Imposto",
     "pending": "Pendente",
     "pending-invoices-button": "Fact. ptes:",
@@ -1316,6 +1318,7 @@
     "stock-transfers": "Transferencias de stock",
     "stockmax": "Stock máx.",
     "stockmin": "Stock mín.",
+    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "Límite de almacenamento alcanzado",
     "structured-data-csv": "Ficheiro CSV",
     "sub-account": "Sub-conta",
