--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1048,7 +1048,9 @@
     "payment-methods": "Modalità di pagamento",
     "payments": "Pagamenti",
     "pct": "% pct",
+    "pct-irpf": "% IRPF",
     "pct-surcharge": "Surcharge rate",
+    "pct-tax": "% impuestos",
     "pct-vat": "% IVA",
     "pending": "pending",
     "pending-invoices-button": "Rischio:",
@@ -1316,6 +1318,7 @@
     "stock-transfers": "stock transfers",
     "stockmax": "Magazzino max",
     "stockmin": "Scorte min.",
+    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "storage-limit-reached",
     "structured-data-csv": "File CSV",
     "sub-account": "Account secondario",
