--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1048,7 +1048,9 @@
     "payment-methods": "Métodos de Pagamento",
     "payments": "payments",
     "pct": "% pct",
+    "pct-irpf": "% IRPF",
     "pct-surcharge": "Surcharge rate",
+    "pct-tax": "% impuestos",
     "pct-vat": "VAT rate",
     "pending": "pending",
     "pending-invoices-button": "Risco:",
@@ -1316,6 +1318,7 @@
     "stock-transfers": "stock transfers",
     "stockmax": "Estoque max.",
     "stockmin": "Stock min.",
+    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "storage-limit-reached",
     "structured-data-csv": "Arquivo CSV",
     "sub-account": "Sub conta",
