--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1048,7 +1048,9 @@
     "payment-methods": "Formes de pagament",
     "payments": "Pagaments",
     "pct": "% pct",
+    "pct-irpf": "% IRPF",
     "pct-surcharge": "% de recàrrec",
+    "pct-tax": "% impuestos",
     "pct-vat": "% d'impost",
     "pending": "pending",
     "pending-invoices-button": "Fact. Pends.",
@@ -1316,6 +1318,7 @@
     "stock-transfers": "Transferències d'estoc",
     "stockmax": "Estoc màxim",
     "stockmin": "Estoc mínim",
+    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "storage-limit-reached",
     "structured-data-csv": "Archiu CSV",
     "sub-account": "Subconte",
