--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -264,7 +264,7 @@
     "company-commission-info": "Només s'aplicarà a l'empresa seleccionada",
     "company-manager": "Administrador de l'empresa",
     "company-name": "Nom d'empresa",
-    "company-warehouse": "Empresa\/Almacén",
+    "company-warehouse": "Empresa\/Magatzem",
     "comparative": "Comparatiu",
     "compared": "Comparat",
     "compatible": "Compatible",
@@ -499,7 +499,7 @@
     "equivalent-account-not-found": "No s'ha pogut trobar un compte equivalent a %accountCode% a l'exercici %exerciseCode%. Heu importat el pla de comptes?",
     "equivalent-subaccount-not-found": "No s'ha trobat un subcompte equivalent a %subAccountCode% per a copiar.",
     "error": "ERROR: %error%",
-    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
+    "error-checking-vat-number": "Error comprovant el nombre '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "S'ha produït un error en connectar-se al servidor Memcache.",
     "error-deleting-lines": "Error en eliminar línies",
     "error-no-name-in-settings": "Error a la vista %viewName%. Cal informar el 'name' en qualcuna columna de l'xml",
@@ -664,7 +664,7 @@
     "group-or-split-p": "Aquest assistent permet generar un nou document a partir de les línies d'altres. Seleccioneu les quantitats que voleu utilitzar, la data del nou document i premi el botó generar.",
     "grouping-type": "Agrupació",
     "groups": "Grups",
-    "has-attachments": "Tiene adjuntos",
+    "has-attachments": "Té adjunts",
     "has-parent": "Té pare",
     "hash": "Hash",
     "header": "Cabecera",
@@ -1048,7 +1048,9 @@
     "payment-methods": "Mètodes de pagament",
     "payments": "Pagaments",
     "pct": "% pct",
+    "pct-irpf": "% IRPF",
     "pct-surcharge": "% Recàrrec",
+    "pct-tax": "% impuestos",
     "pct-vat": "% Impost",
     "pending": "Pendent",
     "pending-invoices-button": "Fact. Pends.",
@@ -1201,7 +1203,7 @@
     "renumber-accounting-ok": "Renumeració d'assentaments completada",
     "renumber-accounting-p": "Renumera els seients per data, de més petit a més gran",
     "renumber-invoices-p": "Renumera les factures en base a la data, de mes petit a més gran",
-    "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
+    "renumber-invoices-success": "Les factures del exercici '%exercise%' han sigut renumerades correctament",
     "repeat-new-password": "Repeteix la contrasenya",
     "reply": "Respuesta",
     "report": "Informe",
@@ -1316,6 +1318,7 @@
     "stock-transfers": "Transferències d'existències",
     "stockmax": "Estoc màx.",
     "stockmin": "Estoc mín.",
+    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "Límit d'emmagatzematge assolit",
     "structured-data-csv": "Fitxer CSV",
     "sub-account": "Subcompte",
