--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -1209,6 +1209,7 @@
     "report": "Informe",
     "report-grouping-account": "Agrupar por cuentas",
     "report-non-grouping-account": "No agrupar por cuentas",
+    "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
     "reports": "Informes",
     "request-sent": "Petición enviada",
     "requires-core": "Requiere FacturaScripts %version%",
