--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1209,6 +1209,7 @@
     "report": "Informe",
     "report-grouping-account": "Agrupar por contas",
     "report-non-grouping-account": "Non agrupar por contas",
+    "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
     "reports": "Informes",
     "request-sent": "Petición enviada",
     "requires-core": "Precisa de FacturaScripts %version%",
