--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1209,6 +1209,7 @@
     "report": "Relatório",
     "report-grouping-account": "Group by account",
     "report-non-grouping-account": "Non group by account",
+    "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
     "reports": "Relatórios",
     "request-sent": "request-sent",
     "requires-core": "Requiere FacturaScripts %version%",
