Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -921,6 +921,7 @@
     "month-name": "Nom del Mes",
     "month-wildcard-info": "Mes actual (de la data actual)",
     "monthly": "Mensual",
+    "monthly-payment": "Pagament mensual",
     "months": "Mesos",
     "more": "Més",
     "more-fields": "Mes camps",
@@ -1475,6 +1476,7 @@
     "url": "Lloc web",
     "use-gaps": "Usar buits",
     "user": "Usuari",
+    "user-and-config": "Usuari i configuració",
     "users": "Usuaris",
     "using-apc": "Usant caché APC",
     "using-filecache": "Usant Filecache",
