--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -921,6 +921,7 @@
     "month-name": "Month Name",
     "month-wildcard-info": "Current month (of the current date)",
     "monthly": "monatlich",
+    "monthly-payment": "Pago mensual",
     "months": "months",
     "more": "Mehr",
     "more-fields": "more-fields",
@@ -1475,6 +1476,7 @@
     "url": "Webseite",
     "use-gaps": "Lücken nutzen",
     "user": "Benutzer",
+    "user-and-config": "Usuario y configuración",
     "users": "Benutzer",
     "using-apc": "Verwenden des APC-Caches",
     "using-filecache": "Verwenden von Filecache",
