--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -921,6 +921,7 @@
     "month-name": "Month Name",
     "month-wildcard-info": "Current month (of the current date)",
     "monthly": "Monthly",
+    "monthly-payment": "Monthly payment",
     "months": "Months",
     "more": "More",
     "more-fields": "More fields",
@@ -1475,6 +1476,7 @@
     "url": "Web site",
     "use-gaps": "Use gaps",
     "user": "User",
+    "user-and-config": "User and configuration",
     "users": "Users",
     "using-apc": "Using APC cache",
     "using-filecache": "Using Filecache",
