--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -921,6 +921,7 @@
     "month-name": "Hilabetearen izena",
     "month-wildcard-info": "Oraingo hilabetea (gaurko datakoa)",
     "monthly": "Hilero",
+    "monthly-payment": "Pago mensual",
     "months": "Hilabeteak",
     "more": "Gehiago",
     "more-fields": "Eremu gehiago",
@@ -1475,6 +1476,7 @@
     "url": "Webgunea",
     "use-gaps": "Hutsuneak erabili",
     "user": "Erabiltzailea",
+    "user-and-config": "Usuario y configuración",
     "users": "Erabiltzaileak",
     "using-apc": "APC cachea erabiliz",
     "using-filecache": "Filecache erabiliz",
