--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -921,6 +921,7 @@
     "month-name": "Nom del més",
     "month-wildcard-info": "Més actual (de la data actual)",
     "monthly": "Mensualment",
+    "monthly-payment": "Pago mensual",
     "months": "Mesos",
     "more": "Més",
     "more-fields": "Més camps",
@@ -1475,6 +1476,7 @@
     "url": "Lloc Web",
     "use-gaps": "Usar buits",
     "user": "Usuari",
+    "user-and-config": "Usuario y configuración",
     "users": "Usuaris",
     "using-apc": "Usant la caché APC",
     "using-filecache": "Usant el Filecache",
