--- a/Core/Translation/es_PA.json
+++ b/Core/Translation/es_PA.json
@@ -921,6 +921,7 @@
     "month-name": "Nombre del Mes",
     "month-wildcard-info": "Mes actual (de la fecha actual)",
     "monthly": "Mensual",
+    "monthly-payment": "Pago mensual",
     "months": "Meses",
     "more": "Más",
     "more-fields": "Más campos",
@@ -1475,6 +1476,7 @@
     "url": "Sitio web",
     "use-gaps": "Usar huecos",
     "user": "Usuario",
+    "user-and-config": "Usuario y configuración",
     "users": "Usuarios",
     "using-apc": "Usando cache APC",
     "using-filecache": "Usando Filecache",
