--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -921,6 +921,7 @@
     "month-name": "Nom du mois",
     "month-wildcard-info": "Mois en cours (de la date actuelle)",
     "monthly": "Mensuel",
+    "monthly-payment": "Pago mensual",
     "months": "Mois",
     "more": "Plus",
     "more-fields": "Plus de champs",
@@ -1475,6 +1476,7 @@
     "url": "Site Internet",
     "use-gaps": "Utiliser les écarts",
     "user": "Utilisateur",
+    "user-and-config": "Usuario y configuración",
     "users": "utilisateurs",
     "using-apc": "Utilisation du cache APC",
     "using-filecache": "Utiliser Filecache",
