--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -921,6 +921,7 @@
     "month-name": "Nome do mes",
     "month-wildcard-info": "Mes actual (da data actual)",
     "monthly": "Mensualmente",
+    "monthly-payment": "Pago mensual",
     "months": "Meses",
     "more": "Máis",
     "more-fields": "Máis campos",
@@ -1475,6 +1476,7 @@
     "url": "Sitio web",
     "use-gaps": "Usar ocos",
     "user": "Usuario",
+    "user-and-config": "Usuario y configuración",
     "users": "Usuarios",
     "using-apc": "Usando caché APC",
     "using-filecache": "Usando Filecache",
