--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -921,6 +921,7 @@
     "month-name": "Month Name",
     "month-wildcard-info": "Current month (of the current date)",
     "monthly": "Monthly",
+    "monthly-payment": "Pago mensual",
     "months": "months",
     "more": "more",
     "more-fields": "more-fields",
@@ -1475,6 +1476,7 @@
     "url": "Sito web",
     "use-gaps": "use-gaps",
     "user": "utente",
+    "user-and-config": "Usuario y configuración",
     "users": "utenti",
     "using-apc": "Utilizzo della cache APC",
     "using-filecache": "Utilizzando Filecache",
