--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -921,6 +921,7 @@
     "month-name": "Nome do mês",
     "month-wildcard-info": "Mês atual (na data de hoje)",
     "monthly": "Mensalmente",
+    "monthly-payment": "Pago mensual",
     "months": "Meses",
     "more": "Mais",
     "more-fields": "Mais campos",
@@ -1475,6 +1476,7 @@
     "url": "Local na rede Internet",
     "use-gaps": "use-gaps",
     "user": "Do utilizador",
+    "user-and-config": "Usuario y configuración",
     "users": "Comercial",
     "using-apc": "Usando cache APC",
     "using-filecache": "Usando Filecache",
